[project]
name = "oneformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.4",
]
